# st-records

./: AGENTS.md  BLUEPRINT-unified-funnel.md  BLUEPRINT.md  CLAUDE.md  DATA_CONTRACT.md  README.md  ST_METRO_ROADMAP.md  project.json  pyproject.toml
api/: deps.py
api/readers/: academy_reader.py
contracts/: __init__.py  agent_upgrade_patch.py  improvement_recommendation.py  persona_upgrade_patch.py  quality_validation.py  research_signal.py  store.py
cron/: logrotate-st-records  st-records
dashboard/: package.json
data/: improvement_recommendations.jsonl  outcome_records.jsonl  research_signals.jsonl  weekly_retrospective.json
schemas/: project-manifest.schema.json
scripts/: agent_upgrader.py  persona_upgrader.py  review_agent_patch.py  review_patch.py  run_loop.sh
